# wpd

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  install.sh  module.prop  settings.gradle.kts  update.json
.github/: FUNDING.yaml
.github/workflows/: build.yml  module.yaml
common/: repo.json  repo.yaml
fastlane/magisk/: repo.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
modconf/: build.gradle.kts  proguard-rules.pro
modconf/src/main/jni/: CMakeLists.txt
modconf/src/main/kotlin/com/dergoogler/wpd/: Main.kt
modconf/src/main/kotlin/dev/mmrl/wpd/: Main.kt
module/: action.sh  config.json  customize.sh  module.prop
module/common/: repo.yaml
module/modconf/: modconf.json
module/webroot/: config.json  index.html
module/webroot/assets/: config.json
plugin/: build.gradle.kts
plugin/src/main/jni/: native-lib.cpp
plugin/src/main/kotlin/dev/mmrl/wpd/: Main.kt
system/usr/share/mmrl/config/mmrl_wpd/: App.jsx  index.jsx
system/usr/share/mmrl/config/mmrl_wpd/activity/: BluetoothActivity.jsx  SoundsListActivity.jsx  WLANActivity.jsx
webroot/: index.html  script.js  style.css
webroot/static/css/: main.3ed132f4.css  main.3ed132f4.css.map
webroot/static/js/: main.4533d065.js  main.4533d065.js.LICENSE.txt  main.4533d065.js.map
webui/: .eslintrc.json  build.ts  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  style.css
webui/src/components/: MMRLContainer.vue  Passwords.vue  WifiCard.vue
(+35 files in other folders)
